Fixed spacing and font sizes

--- a/AvaliaFisio/style.css
+++ b/AvaliaFisio/style.css
@@ -285,17 +285,17 @@ section.description-section{
 }
 
 .main-p{
-  font-size: 22px;
+  font-size: 18px;
 }
 
 .legend{
-  font-size: 15px;
+  font-size: 13px;
   padding-left: 50px;
   padding-right: 50px;
 }
 
-.legend2{
-  font-size: 15px;
+.legend-2{
+  font-size: 13px;
   padding-left: 25px;
   padding-right: 25px;
 }
@@ -303,7 +303,7 @@ section.description-section{
 .evaluation p{
   margin: 0;
   color: #000;
-  font-size: 25px;
+  font-size: 21px;
 }
 
 /* Estilos para a seção de download */
@@ -312,7 +312,7 @@ section.description-section{
   font-family: 'Codec Pro', Arial, sans-serif;
   font-size: 40px;
   padding-top: 50px;
-  padding-bottom: 50px;
+  padding-bottom: 20px;
   margin-left: 20px;
   margin-right: 20px;
 }
@@ -320,7 +320,9 @@ section.description-section{
 .download-section h2{
   text-align: center;
   font-family: 'Codec Pro', Arial, sans-serif;
-  font-size: 50px;
+  font-size: 35px;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 .download-section a{
@@ -346,13 +348,16 @@ section.description-section{
 .installation-section h2{
   text-align: center;
   font-family: 'Codec Pro', Arial, sans-serif;
-  font-size: 50px;
+  font-size: 27px;
 }
 
 
 .installation-section p#centralized{
   text-align: center;
   color: #57E4FF;
+  font-size: 13px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .installation-section h2{
@@ -372,6 +377,8 @@ section.description-section{
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 
 #myCarousel span#carousel-control-prev-icon{
@@ -386,8 +393,8 @@ section.description-section{
 
 #myCarouselVideo {
   min-height: 600px;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin-top: 50px;
+  margin-bottom: 50px;
   border-radius: 10px;
   padding-left: 20px;
   padding-right: 20px;
@@ -397,6 +404,8 @@ section.description-section{
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 
 #myCarouselVideo video{
@@ -442,7 +451,8 @@ section.description-section{
   font-size: 40px;
 }
 .demo-section h2{
-  margin-bottom: 70px;
+  margin-bottom: 30px;
+  font-size: 27px;
 }
 
 .video-settings {
@@ -452,15 +462,19 @@ section.description-section{
 /* Estilos para a seção de demonstração */
 .demo-section {
   text-align: center;
-  padding: 20px 20px 40px 20px;
+  padding: 20px 20px 0px 20px;
   margin-bottom: 40px;
 }
 
 /* Estilos para a seção de research */
 .research-section {
   text-align: center;
-  padding: 20px 20px 40px 20px;
+  padding: 20px 30px 30px 30px;
   margin-bottom: 40px;
+}
+
+.research-section p{
+  font-size: 14px;
 }
 
 a[disabled="disabled"] {
@@ -470,7 +484,8 @@ a[disabled="disabled"] {
 section.info-section {
   text-align: center;
   margin-bottom: 40px;
-  padding: 20px 20px 40px 20px;
+  padding: 10px 30px 40px 30px;
+  font-size: 14px;
 }
 
 section.info-section p span{
@@ -479,12 +494,13 @@ section.info-section p span{
 }
 
 /* Estilizando as seções */
-section {
+/*section {
   margin-bottom: 40px;
-}
+}*/
 
 section h2 {
   margin-top: 0;
+  font-size: 25px;
 }
 
 /* Estilizando o botão de download */
@@ -515,7 +531,7 @@ section h2 {
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
-  font-size: 40px;
+  font-size: 30px;
   cursor: pointer;
 }
 
